--- a/frontend/src/public/css/revslider.css
+++ b/frontend/src/public/css/revslider.css
@@ -362,7 +362,7 @@ website:   	http://www.themesoft.com/
 	z-index: 100;
 	cursor: pointer;
 	position: relative;
-	background: #1fc0a0 url(../images/left-a.png) no-repeat 13px 8px;
+	background: #C8445F url(../images/left-a.png) no-repeat 13px 8px;
 	width: 40px;
 	height: 45px;
 	left: 0px !important;
@@ -373,7 +373,7 @@ website:   	http://www.themesoft.com/
 	z-index: 100;
 	cursor: pointer;
 	position: relative;
-	background: #1fc0a0 url(../images/right-a.png) no-repeat 13px 8px;
+	background: #C8445F url(../images/right-a.png) no-repeat 13px 8px;
 	width: 40px;
 	height: 45px;
 	right: 0 !important;
