--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -65,6 +65,36 @@ Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-backgro
 /* */
 /*----------- 1. Body --------------*/
 
+@font-face {
+    font-family: ChoplinExtraLight;
+    src: url("../fonts/Choplin-ExtraLight.otf");
+}
+
+@font-face {
+    font-family: ChoplinMedium;
+    src: url("../fonts/Choplin-Medium");
+}
+
+@font-face {
+    font-family: TradeGothicLTStd;
+    src: url("../fonts/TradeGothicLTStd.otf");
+}
+
+@font-face {
+    font-family: TradeGothicLTStdCn;
+    src: url("../fonts/TradeGothicLTStd-Cn18.otf");
+}
+
+@font-face {
+    font-family: tt0142m;
+    src: url("../fonts/tt0142m.ttf");
+}
+
+@font-face {
+    font-family: tt0144m;
+    src: url("../fonts/tt0144m.ttf");
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
@@ -77,7 +107,7 @@ h2, .h2 {
 	font-weight: bold;
 }
 a {
-	color: #1fc0a0;
+	color: #605d7d;
 }
 a:hover {
 	color: #333;
@@ -326,7 +356,7 @@ a.button:hover {
 }
 .header-top {
 	padding: 5px 0px 5px 0px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'TradeGothicLTStd', sans-serif;
 	/*border-bottom: 1px solid #e5e5e5;*/
 	background: #fff;
 	font-size:13px
