--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -96,7 +96,7 @@ Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-backgro
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'tt0142m', sans-serif;
 	font-size: 14px;
 	color: #333;
 
@@ -214,7 +214,7 @@ button.button {
 	background: none repeat scroll 0 0 #fff;
 	color: #e94d65;
 	display: inline-block;
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: bold;
 	letter-spacing: 0.5px;
 	line-height: normal;
@@ -222,6 +222,7 @@ button.button {
 	text-transform: uppercase;
 	border: 1px #e94d65 solid;
 	border-radius: 5px;
+	font-family: "tt0144m";
 }
 button.button:hover {
 	/*padding: 6px 12px;*/
@@ -307,7 +308,7 @@ a.button:hover {
 	display: inline-block;
 	font-size: 13px;
 }
-.col2-right-layout .col-main {
+.col2-right-layout .col-main{ 
 	background: none repeat scroll 0 0 #fff;
 	display: inline-block;
 	font-size: 13px;
@@ -371,7 +372,7 @@ header .header-top-links {
 /* Toplink */
 .toplinks {
 	line-height: normal;
-	padding: 4px 0 5px 0px;
+	padding: 4px 10px 5px 0px;
 }
 .toplinks .links {
 	text-align: right;
@@ -787,27 +788,61 @@ ul.currencies_list li a:hover {
 .top-link-wishlist {
 	font-size: 20px;
 	height: 40px;
-	line-height: 40px;
+	line-height: 16px;
 	text-align: center;
-	color: #1fc0a0;
+	color: #e94d65;
 /*	background: #f2f2f2; */
-	display: inline-block;
-	margin-top: 22px;
+	display: inline-flex;
+	margin-top: 28px;
 	width: 80px;
 	vertical-align: top;
 	float: left;
 	border-left: none;
 	border-radius: 2px;
-	margin-left: 15px;
+	margin-left: 30px;
 }
 .wish{
-    color:black;
-	font-family: 'Open Sans', sans-serif;	
+    color:#777978;
+	font-family: 'TradeGothicLTStdCn';	
 	font-style:normal;
-	font-size:13px;
-	margin-top:5px;
+	font-size:18px;
+	/*margin-top:5px;*/
+	font-weight: 500;
+	margin-left: 4px;
 }
-.top-link-wishlist:hover{ color:#333}
+.top-link-wishlist:hover{ color:#e94d65}
+
+/* shopping-cart */
+
+.top-link-shopping-cart {
+	font-size: 20px;
+	height: 40px;
+	line-height: 16px;
+	text-align: center;
+	color: #413C5E;
+/*	background: #f2f2f2; */
+	display: inline-flex;
+	margin-top: 28px;
+	width: 80px;
+	vertical-align: top;
+	float: left;
+	border-left: none;
+	border-radius: 2px;
+	/*margin-left: 50px;*/
+	position: relative;
+	left: 50px;
+}
+.shopping-cart{
+    color:#777978;
+	font-family: 'TradeGothicLTStdCn';	
+	font-style:normal;
+	font-size:18px;
+	/*margin-top:5px;*/
+	font-weight: 500;
+	margin-left: 7px;
+}
+.top-link-shopping-cart:hover{ color:#413C5E}
+
 /* Top Shopping Cart */
 .top-cart-content {
 	display: none;
@@ -2940,7 +2975,7 @@ margin-top:-42px;
 	width: 34px;
 	height: 34px;
 	float: left;
-	background: #333;
+	background: #413C5E;
 	content: "";
 	text-align: center;
 	font-family: FontAwesome;
@@ -2950,7 +2985,7 @@ margin-top:-42px;
 }
 .box-hover .add-to-links li:hover a:after {
 	font-size: 11px;
-	background: #1fc0a0;
+	background: #e94d65;
 	color: #fff
 }
 
@@ -5509,7 +5544,7 @@ ol#compare-items li.last {
  padding-left:0px;
 }
 .subscribe-area {
-    background-color: #333333;
+    background-color: #413C5E;
     margin-top: 18px;
     overflow: hidden;
     padding: 10px 0px;
@@ -5527,16 +5562,16 @@ ol#compare-items li.last {
 .subscribe-title {
     display: block;
     float: left;
-    margin: 5px 10px 0 0;
+    margin: 12px 10px 0 0;
 }
 
 .subscribe-title label {
     color: #fff;
     display: block;
-    font-size: 15px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: bold;
     margin: 0 0 5px;
-   
+   	font-family: "TradeGothicLTStd";
 }
 
 #subscribe-form {
@@ -5591,7 +5626,7 @@ ol#compare-items li.last {
     display:inline-block;
     padding: 0px 20px;
     border-radius:0px 25px 25px 0px;
-
+    font-family: "tt0144m";
 }
 
 .subscribe-link .social-link {
