--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -206,9 +206,9 @@ button {
 	color: #333
 }
 .button:hover {
-	background: #1fc0a0;
+	background: #e94d65;
 	color: #fff;
-	border: 1px #1fc0a0 solid;
+	border: 1px #e94d65 solid;
 }
 button.button {
 	background: none repeat scroll 0 0 #fff;
@@ -280,12 +280,13 @@ a.button:hover {
 /* 3-Add to cart QTY */
 .custom button.items-count {
 	background-color: #fff;
-	border: 1px #ececec solid;
-	color: #1fc0a0
+	border: 1px #e94d65 solid;
+	border-radius: 5px;
+	color: #e94d65
 }
 .custom button.items-count:hover {
-	background-color: #1fc0a0;
-	border: 1px #1fc0a0 solid;
+	background-color: #e94d65;
+	border: 1px #e94d65 solid;
 	color: #fff;
 }
 /*----------- 2. Layout --------------*/
@@ -4433,7 +4434,7 @@ a.button.detail-bnt span {
     position: relative;
 }
 .breadcrumbs a {
-	color: #666;
+	color: #605d7d;
 	font-size: 12px;
 	font-weight: normal;
 }
@@ -4454,7 +4455,7 @@ a.button.detail-bnt span {
 }
 .breadcrumbs strong {
 	font-weight: normal;
-	color: #1fc0a0;
+	color: #e94d65;
 }
 figure.effect img {
 	-webkit-transition: opacity 0.35s;
@@ -5169,7 +5170,7 @@ ul#magicat li .open-close, .block-layered-nav dt .toggleBtn {
 	font-size: 14px;
 }
 .breadcrumbs li strong {
-	color: #000;
+	color: #e94d65;
 }
 /*12f. Block: Related */
 .related-slider {
@@ -6444,7 +6445,7 @@ ol#compare-items li.last {
 	margin: 0;
 }
 .product-view .product-name {
-
+	color: #413C5E;
 }
 .product-view .product-name h1 {
     font-size: 36px;
@@ -6455,15 +6456,16 @@ ol#compare-items li.last {
     font-weight: 700;
     padding-right: 55px;
     letter-spacing: -1px;
+    text-transform: uppercase;;
+    font-family: "tt0142m";
 }
 .product-view .short-description {
 	font-size: 13px;
 	padding: 20px 0px;
-	border-bottom: 1px #ddd dotted
-
+	border-bottom: 1px #ddd dotted;
 }
 .product-view .short-description h2 {
-	font-size: 14px;
+	font-size: 17px;
 
 	color: #333;
 	margin: 0px;
@@ -6471,11 +6473,15 @@ ol#compare-items li.last {
 	font-weight: 700;
 }
 .product-view .short-description p {
-	font-size: 13px;
+	font-size: 16px;
 	margin: 0px;
-	color: #222;
-
+	color: #413C5E;
 }
+
+.product-view .short-description p strong {
+	color: #e94d65;
+}
+
 .product-view .product-shop .add-to-box {
 	padding: 20px 0px;
 	overflow: hidden;
@@ -6535,8 +6541,8 @@ ol#compare-items li.last {
 }
 .product-view .product-shop .add-to-links li a:hover {
 	color: #fff;
-	background: #1fc0a0;
-	border: 1px #1fc0a0 solid;
+	background: #e94d65;
+	border: 1px #e94d65 solid;
 }
 .product-view .email-friend {
 	font-size: 12px;
@@ -6578,14 +6584,15 @@ ol#compare-items li.last {
 	font-size: 14px;
 }
 .product-view .product-shop .add-to-links .link-wishlist {
-	color: #1fc0a0;
+	color: #e94d65;
 	line-height: normal;
 	font-weight: normal;
 	vertical-align: top;
 	display: block;
 	height: 40px;
 	width: 45px;
-	border: 1px #ececec solid;
+	border: 1px #e94d65 solid;
+	border-radius: 5px;
 	line-height: 36px;
 	vertical-align: top;
 	text-align: center;
@@ -6804,8 +6811,8 @@ color: #fff;
 	font-weight: normal;
 }
 .product-view .product-shop .price {
-	font-size: 24px;
-	color: #1fc0a0;
+	font-size: 30px;
+	color: #e94d65;
 	font-weight: bold;
 }
 .download-app {margin-top:20px; overflow:hidden}
@@ -6814,8 +6821,8 @@ color: #fff;
 
 .add-to-cart .qty, .qty-holder .qty {
 	background-color: #FFFFFF;
-	border: 1px solid #E0E0E0;
-	border-radius: 0px;
+	border: 1px solid #e94d65;
+	border-radius: 5px;
 	font-size: 15px;
 	font-weight: bold;
 }
@@ -6905,12 +6912,13 @@ color: #fff;
 	padding: 10px 20px;
 	background: none repeat scroll 0 0 #fff;
 	border-top: none;
+	color: #413C5E;
 }
 .product-tabs li a {
-	color: #333;
+	color: #413C5E;
 	margin-right: 0px;
 	text-decoration: none;
-	font-size: 13px;
+	font-size: 16px;
 	font-weight: 400;
 	transition: color 300ms ease-in-out 0s, background-color 300ms ease-in-out 0s, background-position 300ms ease-in-out 0s;
 	padding: 0px;
@@ -6935,9 +6943,14 @@ color: #fff;
 	padding: 12px 0 12px;
 	margin-right:0px
 }
+
+.nav-tabs.product-tabs > li > a:hover {
+	color: #F3BE49;
+}
+
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
 	border: none;
-	color: #1fc0a0;
+	color: #e94d65;
 	background:none
 }
 .nav-tabs > li > a:hover {
@@ -7104,7 +7117,7 @@ button.button.btn-add:before {
 	padding: 0;
 }
 .box-reviews ul li h6 a {
-	color: #333;
+	color: #e94d65;
 	font-weight: bold;
 	letter-spacing: 0.5px;
 }
@@ -7218,6 +7231,7 @@ a.button.view-all {
 	line-height: 20px;
 	padding: 8px;
 	letter-spacing: 0.5px;
+	font-family: 'tt0142m';
 }
 #customer-reviews ul {
 	margin: auto;
@@ -8847,11 +8861,11 @@ address {
 	margin-top: 10px;
 }
 input.input-text, select, textarea {
-	background-color: #fff;
-	border: 1px #e5e5e5 solid;
+	background-color: #413C5E;
+	border: 1px #413C5E solid;
 	padding: 8px 10px;
 	outline: none;
-	color: #aaa;
+	color: #413C5E;
 }
 #wishlist-table textarea {
 	padding: 8px 10px;
@@ -14286,3 +14300,29 @@ button.button.button-clear {
     margin-bottom: 15px;}
 	
 .form-control {box-shadow:none; border-radius:0}	
+
+
+.circle {
+	width:20px;
+	height:20px;
+	border-radius:50px;
+	font-size:20px;
+	line-height:100px;
+	text-align:center;
+	display: inline-flex;
+	margin-right: 4px;
+}
+
+.red {
+	background: red;
+	color: red;
+}
+
+.blue {
+	background: blue;
+	color: blue;
+}
+
+.color-detail {
+	display: inline;
+}
