--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -6349,7 +6349,7 @@ ol#compare-items li.last {
     padding: 0;
     margin: 0;
     padding: 0;
-    color: #999
+    color: #e94d65;
 }
 
 #poll-answers {
@@ -17394,4 +17394,17 @@ a.button.wishlist {
 .category-description {
     font-size: 16px;
     font-family: 'Choplin-Medium', Sans-Serif;
+}
+
+.circle {
+    border-radius: 50%;
+    width: 23px;
+    height: 23px;
+    -webkit-box-shadow: inset 0px 0px 13px -6px rgba(0,0,0,0.93);
+    -moz-box-shadow: inset 0px 0px 13px -6px rgba(0,0,0,0.93);
+    box-shadow: inset 0px 0px 13px -6px rgba(0,0,0,0.93);
+}
+
+.circle.selected-circle {
+    border: 2px solid black;
 }
