--- a/frontend/src/resources/assets/sass/_variables.scss
+++ b/frontend/src/resources/assets/sass/_variables.scss
@@ -36,3 +36,8 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+
+$primary-color: #e94d65;
+$secondary-color: #413C5E;
+$alternative-color: #F3BE49;
+
