--- a/frontend/src/resources/assets/sass/app.scss
+++ b/frontend/src/resources/assets/sass/app.scss
@@ -3,9 +3,12 @@
 //@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 //
 //// Variables
-//@import "variables";
 //
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+//
+//@import "node_modules/boottrap-slider/";
 
-@import "node_modules/boottrap-slider/";
+@import "fonts";
+@import "variables";
+@import "editor";
