--- a/frontend/src/resources/assets/sass/_editor.sass
+++ b/frontend/src/resources/assets/sass/_editor.sass
@@ -18,7 +18,7 @@ section.editor
 
   div.canvas-container
     canvas.canvas-paper-a4
-      border: 1px solid #0c0c0c
+      border: 1px solid rgb(204, 204, 204)
 
   h2.tools-title
     margin-top: 0
@@ -103,3 +103,31 @@ section.editor
     font-size: 1.9rem
     @extend .futura-medium
     background-color: $secondary-color
+
+  button.btn-change-image
+    background-color: $primary-color
+    @extend .futura-medium
+    font-size: 1.8rem
+
+  button.btn-black-and-white
+    background-color: white
+    border: 1px solid black
+    color: black
+    font-size: 1.2rem
+
+  button.btn-sepia
+    background-color: #c0b084
+    color: white
+    font-size: 1.2rem
+
+  button.btn-enhancements
+    background-color: $secondary-color
+    font-size: 1.2rem
+
+  button.btn-remove-object
+    background-color: $primary-color
+    font-size: 1.4rem
+    margin-top: 1rem
+
+  input[type=range]
+    height: 34px
