Editor advances WIP

--- a/frontend/src/resources/assets/sass/_editor.sass
+++ b/frontend/src/resources/assets/sass/_editor.sass
@@ -116,6 +116,11 @@ section.editor
     font-size: 1.2rem
 
   button.btn-sepia
+    background-color: #c08bb0
+    color: white
+    font-size: 1.2rem
+
+  button.btn-sepia2
     background-color: #c0b084
     color: white
     font-size: 1.2rem
