--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -17523,3 +17523,20 @@ select {
 select:focus {
     border: 1px solid #e5e5e5;
 }
+
+.link-button {
+    border: 1px #e94d65 solid !important;
+    color: #e94d65 !important;
+    margin-bottom: 1rem !important;
+    font-size: 1.5rem !important;
+    -webkit-border-radius: 5px !important;
+    -moz-border-radius: 5px !important;
+    border-radius: 5px !important;
+    font-family: 'tt0144m', sans-serif !important;
+    font-size: 14px !important;
+    text-transform: uppercase !important;
+}
+
+.link-button:hover {
+    color: white !important;
+}
