--- a/frontend/src/public/css/style.css
+++ b/frontend/src/public/css/style.css
@@ -17557,3 +17557,7 @@ select:focus {
     background-color: #413C5E !important;
     border-color: #413C5E !important;
 }
+
+.detail-select {
+    margin-bottom: 8px;
+}
